--- a/test/Compiler.Dynamic.Tests/Compiler.Dynamic.Tests.csproj
+++ b/test/Compiler.Dynamic.Tests/Compiler.Dynamic.Tests.csproj
@@ -19,8 +19,33 @@
   <ItemGroup>
     <TestAssets Include="assets/**/*" />
     <Compile Remove="@(TestAssets)" />
+    <Compile Remove="assets\test15\base_page.cs" />
+    <Compile Remove="assets\test15\class_to_reference.cs" />
+    <Compile Remove="assets\test15\custom_base_property.aspx.cs" />
     <None Remove="@(TestAssets)" />
+    <None Remove="assets\test15\custom_base_property.aspx" />
+    <None Remove="assets\test15\custom_base_property.aspx._0.html" />
+    <TestAssets Remove="assets\test15\base_page.cs" />
+    <TestAssets Remove="assets\test15\class_to_reference.cs" />
+    <TestAssets Remove="assets\test15\custom_base_property.aspx" />
+    <TestAssets Remove="assets\test15\custom_base_property.aspx.cs" />
+    <TestAssets Remove="assets\test15\custom_base_property.aspx._0.html" />
     <Content Include="@(TestAssets)">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\test15\class_to_reference.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\test15\base_page.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\test15\custom_base_property.aspx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\test15\custom_base_property.aspx.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\test15\custom_base_property.aspx._0.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
