--- a/nuget.config
+++ b/nuget.config
@@ -5,5 +5,6 @@
     <clear />
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
     <add key=".NET Libraries Daily" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet-libraries/nuget/v3/index.json" />
+    <add key="CoreWebForms" value="https://nwn.pkgs.visualstudio.com/39c4c4dd-2758-41aa-811e-fd8975b68910/_packaging/CoreWebForms/nuget/v3/index.json" />
   </packageSources>
 </configuration>
