--- a/test/Compiler.Dynamic.Tests/Compiler.Dynamic.Tests.csproj
+++ b/test/Compiler.Dynamic.Tests/Compiler.Dynamic.Tests.csproj
@@ -19,8 +19,18 @@
   <ItemGroup>
     <TestAssets Include="assets/**/*" />
     <Compile Remove="@(TestAssets)" />
+    <Compile Remove="assets\test17\controls\mycontrol - Copy.ascx.cs" />
     <None Remove="@(TestAssets)" />
+    <None Remove="assets\test17\controls\innercontrol.ascx" />
+    <TestAssets Remove="assets\test17\controls\innercontrol.ascx" />
+    <TestAssets Remove="assets\test17\controls\mycontrol - Copy.ascx.cs" />
     <Content Include="@(TestAssets)">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\test17\controls\innercontrol.ascx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\test17\controls\innercontrol.ascx.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
