--- a/test/Compiler.Dynamic.Tests/Compiler.Dynamic.Tests.csproj
+++ b/test/Compiler.Dynamic.Tests/Compiler.Dynamic.Tests.csproj
@@ -20,9 +20,14 @@
     <TestAssets Include="assets/**/*" />
     <Compile Remove="@(TestAssets)" />
     <None Remove="@(TestAssets)" />
+  
     <Content Include="@(TestAssets)">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+
+
     <Content Include="assets\test17\controls\innercontrol.ascx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -43,6 +48,4 @@
     </Reference>
     
   </ItemGroup>
-
-
 </Project>
