--- a/src/Extensions/Script/js/package.json
+++ b/src/Extensions/Script/js/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c --no-treeshake",
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
   },
   "devDependencies": {
