--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,15 @@
 	"name": "C# (.NET)",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/dotnet:1-9.0",
-
+	"mounts": [
+		"source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
+	],
+	"remoteEnv": {
+		"PATH": "${containerEnv:PATH}:/home/vscode/.dapr/bin:/home/vscode/.dotnet/tools",
+		"VSS_NUGET_ACCESSTOKEN": "${localEnv:VSS_NUGET_ACCESSTOKEN}",
+		"VSS_NUGET_EXTERNAL_FEED_ENDPOINTS":"{\"endpointCredentials\": [{\"endpoint\":\"https://nwn.pkgs.visualstudio.com/39c4c4dd-2758-41aa-811e-fd8975b68910/_packaging/CoreWebForms/nuget/v3/index.json\", \"username\":\"optional\", \"password\":\"${localEnv:VSS_NUGET_ACCESSTOKEN}\"}]}",
+		"NUGET_CREDENTIALPROVIDER_SESSIONTOKENCACHE_ENABLED": "true"
+	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/dotnet:2": {
@@ -24,7 +32,7 @@
 				"ms-dotnettools.csdevkit"
 			]
 		}
-	},
+	}
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [5000, 5001],
