--- a/test/Compiler.Dynamic.Tests/Compiler.Dynamic.Tests.csproj
+++ b/test/Compiler.Dynamic.Tests/Compiler.Dynamic.Tests.csproj
@@ -20,7 +20,18 @@
     <TestAssets Include="assets/**/*" />
     <Compile Remove="@(TestAssets)" />
     <None Remove="@(TestAssets)" />
+    
     <Content Include="@(TestAssets)">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+
+
+    <Content Include="assets\test17\controls\innercontrol.ascx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\test17\controls\innercontrol.ascx.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
